--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,4 @@
+public
 # Logs
 logs
 *.log
@@ -7,7 +8,6 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 .DS_Store
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
