--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,8 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.102",
-    "@mui/material": "^5.10.9",
-    "@tanstack/react-query": "^4.10.3",
     "@mui/material": "^5.10.8",
+    "@tanstack/react-query": "^4.10.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
